# pybop

./: .gitignore  Cargo.toml  pyproject.toml
python/pybop/: bop.py  neighbors.py
src/: bop.rs  lib.rs  point.rs
test/: test_calculation.py  test_import.py
